force-app/main/default/objects/Deal_Fee__c/Deal_Fee__c.object-meta.xml
<CustomObject>
    <description>fee information for quotes, contracts, etc</description>
    <label>Deal Fee</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>