force-app/main/default/objects/Deal_Fee__c/fields/Allow_Import__c.field-meta.xml
<CustomField>
    <fullName>Allow_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Import</label>
    <type>Checkbox</type>
</CustomField>