force-app/main/default/objects/Deal_Fee__c/fields/Consultant_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Margin_Percentage__c</fullName>
    <label>Consultant Margin Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>