force-app/main/default/objects/Deal_Fee__c/fields/Consultant_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Pay_Type__c</fullName>
    <label>Consultant Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consultant_Pay_Method</valueSetName>
    </valueSet>
</CustomField>