force-app/main/default/objects/Deal_Fee__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Deal Fees</relationshipLabel>
    <relationshipName>Deal_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>