force-app/main/default/objects/Deal_Fee__c/fields/ContractIssued__c.field-meta.xml
<CustomField>
    <fullName>ContractIssued__c</fullName>
    <formula>ISPICKVAL( Contract__r.Contract_Status__c, &quot;Activated&quot;) &amp;&amp; ISPICKVAL( Contract__r.Confirmation_Status__c, &quot;Issued&quot;)</formula>
    <label>ContractIssued</label>
    <type>Checkbox</type>
</CustomField>