force-app/main/default/objects/Deal_Fee__c/fields/Fee_Category__c.field-meta.xml
<CustomField>
    <fullName>Fee_Category__c</fullName>
    <label>TC Rollup Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Category</valueSetName>
    </valueSet>
</CustomField>