force-app/main/default/objects/Deal_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Type</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>$Source.Interface_Flex_Option__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Fee_Type__c.Allow_User_Select__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Interface_Flex_Option__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Fee_Type__c.Cost_Group__c</field>
            <operation>equals</operation>
            <value>04 - Margin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fee_Type__c</referenceTo>
    <relationshipLabel>Deal Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>