force-app/main/default/objects/Deal_Fee__c/fields/Fee_Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_Number__c</fullName>
    <description>fee order number for fees of the same fee type</description>
    <inlineHelpText>fee order number for fees of the same fee type</inlineHelpText>
    <label>Fee Type Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>