force-app/main/default/objects/Deal_Fee__c/fields/Fee_Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Volume_Type__c</fullName>
    <label>Fee Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surrendered Storage</fullName>
            </value>
            <value>
                <fullName>Transport Demand</fullName>
            </value>
            <value>
                <fullName>Test Fee Other</fullName>
                <isActive>false</isActive>
                <label>Test Fee Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>