force-app/main/default/objects/Deal_Fee__c/fields/Flex_Option__c.field-meta.xml
<CustomField>
    <fullName>Flex_Option__c</fullName>
    <label>Flex Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flex_Option</valueSetName>
    </valueSet>
</CustomField>