force-app/main/default/objects/Deal_Fee__c/fields/Interface_Flex_Option__c.field-meta.xml
<CustomField>
    <fullName>Interface_Flex_Option__c</fullName>
    <label>Interface Flex Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>choice</fullName>
            </value>
            <value>
                <fullName>float</fullName>
            </value>
            <value>
                <fullName>fix</fullName>
            </value>
            <value>
                <fullName>manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>