force-app/main/default/objects/Deal_Fee__c/fields/Invoice_Label__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Label__c</fullName>
    <label>Invoice Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>