force-app/main/default/objects/Deal_Fee__c/fields/Invoice_Rollup_Category__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rollup_Category__c</fullName>
    <label>Invoice Rollup Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commodity Price</fullName>
            </value>
            <value>
                <fullName>Commodity Price - Individual Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pass Thru</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>