force-app/main/default/objects/Deal_Fee__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Deal Fees</relationshipLabel>
    <relationshipName>Deal_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>