force-app/main/default/objects/Deal_Fee__c/fields/Reset_Line_Item_Fees__c.field-meta.xml
<CustomField>
    <fullName>Reset_Line_Item_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, process builder will update related line item fees&#39; cost to 0.  system managed field</description>
    <inlineHelpText>if checked, process builder will update related line item fees&#39; cost to 0.  system managed field</inlineHelpText>
    <label>Reset Line Item Fees</label>
    <type>Checkbox</type>
</CustomField>