force-app/main/default/objects/Deal_Fee__c/fields/TC_Float_Desc__c.field-meta.xml
<CustomField>
    <fullName>TC_Float_Desc__c</fullName>
    <label>TC Float Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>