force-app/main/default/objects/Deal_Fee__c/fields/Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Volume_Type__c</fullName>
    <description>Endur volume type (billing, BAV, etc.)</description>
    <inlineHelpText>Endur volume type (billing, BAV, etc.)</inlineHelpText>
    <label>Volume Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>