force-app/main/default/objects/Deal_Fee__c/recordTypes/Fee.recordType-meta.xml
<RecordType>
    <fullName>Fee</fullName>
    <active>true</active>
    <label>Fee</label>
</RecordType>