force-app/main/default/objects/Deal_Fee__c/validationRules/Margin_Percentage_on_Executed_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Margin_Percentage_on_Executed_Contract</fullName>
    <active>true</active>
    <description>If contract status = &#39;activated&#39;, then Consultant pay type != &#39;Margin Percentage&#39;</description>
    <errorConditionFormula>AND(
OR(ISNEW(), ISCHANGED(Consultant_Pay_Type__c)),
ISPICKVAL(Contract__r.Contract_Status__c,&#39;Activated&#39;),
ISPICKVAL(Consultant_Pay_Type__c, &#39;Margin Percentage&#39;)
)</errorConditionFormula>
    <errorMessage>Cannot select a Consultant Pay Type of &#39;Margin Percentage&#39; on an Activated contract</errorMessage>
</ValidationRule>